<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.david.radiobutton.MainActivity">

    <TextView
        android:text="@string/texto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_weight="1"
        android:textSize="24sp"
        android:gravity="center" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:gravity="center">

    </LinearLayout>

    <RadioGroup
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:id="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp"
        android:gravity="center_vertical|center">
        <RadioButton
            android:layout_width="100sp"
            android:layout_height="35sp"
            android:text="@string/rojo"
            android:id="@+id/Rrojo"
            android:buttonTint="#fd0404"
            android:textSize="20sp"/>
        <RadioButton
            android:layout_width="100sp"
            android:layout_height="35sp"
            android:text="@string/verde"
            android:id="@+id/Rverde"
            android:buttonTint="#1df700"
            android:textSize="20sp"/>
        <RadioButton
            android:layout_width="100sp"
            android:layout_height="35sp"
            android:text="@string/azul"
            android:id="@+id/Razul"
            android:buttonTint="#002fff"
            android:textSize="20sp"/>
        <RadioButton
            android:layout_width="100sp"
            android:layout_height="35sp"
            android:text="@string/blanco"
            android:id="@+id/Rblanco"
            android:buttonTint="#bcbdc4"
            android:textSize="20sp"/>
    </RadioGroup>

    <Button
        android:text="@string/aceptar"
        android:layout_width="190sp"
        android:textSize="30sp"
        android:layout_height="120sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="56dp"
        android:id="@+id/aceptar"
        android:onClick="ColorFondo"/>
</RelativeLayout>
